# la9310-freertos

./: .gitignore
Demo/CORTEX_M4_NXP_LA9310_GCC/: CMakeLists.txt  build_release.sh  freertos_compat.c  ipiQueue.c  la9310_demo.c  main.c  ms_camera_l1c_modem_mgr.c  ms_camera_l1c_phytimer_handler.c  ms_camera_l1c_receiver.c  ms_camera_l1c_rf_manager.c  ms_camera_l1c_transmitter.c  ms_camera_l1c_vspa_in.c  ms_camera_l1c_vspa_out.c  ms_controller_globals.c  ms_controller_l1_controller_fwk.c  ms_controller_l1c_controller.c  ms_controller_l1c_modem_mgr.c  ms_controller_l1c_phytimer_handler.c  ms_controller_l1c_receiver.c  ms_controller_l1c_rf_manager.c  ms_controller_l1c_transmitter.c  ms_controller_l1c_vspa_in.c  ms_controller_l1c_vspa_out.c  ms_controller_logger.c  ms_controller_procx_comm.c  ms_globals.c  ms_l1_controller_fwk.c  ms_l1c_controller.c  ms_l1c_host_in.c  ms_l1c_host_out.c  ms_l1c_modem_mgr.c  ms_l1c_phytimer_handler.c  ms_l1c_receiver.c  ms_l1c_rf_manager.c  ms_l1c_transmitter.c  ms_l1c_vspa_in.c  ms_l1c_vspa_out.c  ms_logger.c  ms_procx_comm.c
Demo/CORTEX_M4_NXP_LA9310_GCC/drivers/phy_timer/: phytimer.c  phytimer.h
Demo/CORTEX_M4_NXP_LA9310_GCC/include/: common.h  ipiQueue.h  la9310_demo.h  la9310_pci.h  ms_camera_global_typedef.h  ms_camera_globals.h  ms_camera_l1_controller_fwk.h  ms_camera_l1c_controller.h  ms_camera_l1c_modem_mgr.h  ms_camera_l1c_receiver.h  ms_camera_l1c_transmitter.h  ms_camera_l1c_vspa_in.h  ms_camera_l1c_vspa_out.h  ms_camera_logger.h  ms_camera_procx_comm.h  ms_controller_globals.h  ms_controller_l1_controller_fwk.h  ms_controller_l1c_controller.h  ms_controller_l1c_modem_mgr.h  ms_controller_l1c_receiver.h  ms_controller_l1c_transmitter.h  ms_controller_l1c_vspa_in.h  ms_controller_l1c_vspa_out.h  ms_global_typedef.h  ms_globals.h  ms_l1_controller_fwk.h  ms_l1c_controller.h  ms_l1c_modem_mgr.h  ms_l1c_receiver.h  ms_l1c_transmitter.h  ms_l1c_vspa_in.h  ms_l1c_vspa_out.h  ms_logger.h  ms_procx_comm.h
Demo/CORTEX_M4_NXP_LA9310_GCC/platform/ARM_CM4/: la9310_host_pcie_mode.ld  la9310_host_pcie_test_mode.ld
Demo/CORTEX_M4_NXP_LA9310_GCC/platform/boards/la9310/: FreeRTOSConfig.h
Demo/CORTEX_M4_NXP_LA9310_GCC/tests/qemu/: CMakeLists.txt  FreeRTOSConfig.h  la9310_boot_mode.h  mps2_an386.ld  run_tests.sh  startup_qemu.S  stubs.c  test_ipc.c  test_ipc.h  test_main.c
Demo/CORTEX_M4_NXP_LA9310_GCC/utils/: la9310_nlm_test_command.c
Demo/CORTEX_M4_NXP_LA9310_GCC/vspa_fft_service/: Makefile
Demo/CORTEX_M4_NXP_LA9310_GCC/vspa_fft_service/src/: l1c_vspa_fft_service.c  l1c_vspa_fft_service.h  startup.s
